Uploaded image for project: 'Apache HAWQ'
  1. Apache HAWQ
  2. HAWQ-104

HAWQ RM resource request timeout mechanism does not work

    XMLWordPrintableJSON

Details

    Description

      When yarn is not available or yarn has no enough resource to support query running, the resource request of that query should be timed out based on design. User should use guc to control the timeout value.

      This fix is to make this work as before.

      Attachments

        Activity

          People

            yjin Yi Jin
            yjin Yi Jin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: