HAWQ-104. HAWQ RM resource request timeout mechanism does not work